--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
           AUTH_SECRET: ${{secrets.AUTH_SECRET}}
           AUTH0_CLIENT_ID: ${{secrets.AUTH0_CLIENT_ID}}
           AUTH0_CLIENT_SECRET: ${{secrets.AUTH0_CLIENT_SECRET}}
-          AUTH0_ISAUTH0_ISSUER_BASE_URLSUER: ${{secrets.AUTH0_ISSUER_BASE_URL}}
+          AUTH0_ISSUER_BASE_URL: ${{secrets.AUTH0_ISSUER_BASE_URL}}
           PUSHOVER_URL: ${{secrets.PUSHOVER_URL}}
           PUSHOVER_APP_TOKEN: ${{secrets.PUSHOVER_APP_TOKEN}}
           PUSHOVER_USER_KEY: ${{secrets.PUSHOVER_USER_KEY}}
