--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
 		"next-intl": "3.26.5",
 		"next-themes": "0.4.6",
 		"next-view-transitions": "0.3.4",
-		"photoswipe": "5.4.4",
 		"pino": "9.6.0",
 		"prisma": "6.6.0",
 		"react": "19.1.0",
@@ -80,6 +79,7 @@
 		"use-debounce": "10.0.4",
 		"uuid": "11.1.0",
 		"vaul": "1.1.2",
+		"yet-another-react-lightbox": "3.23.0",
 		"zod": "3.24.3"
 	},
 	"devDependencies": {
