--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
 		"prisma:studio": "prisma studio  --schema=./s-schema/schema.prisma",
 		"postinstall": "pnpm prisma:generate  --schema=./s-schema/schema.prisma",
-		"commit": "git-cz",
+		"commit": "cz",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
 		"license:summary": "license-checker --summary> library-license.txt",
@@ -118,6 +118,8 @@
 		"@vitest/browser": "3.1.1",
 		"@vitest/coverage-v8": "3.1.1",
 		"@vitest/eslint-plugin": "1.2.7",
+		"commitizen": "4.3.1",
+		"cz-conventional-changelog": "3.3.0",
 		"depcheck": "1.4.7",
 		"dotenv": "16.5.0",
 		"eslint": "9.27.0",
@@ -131,7 +133,6 @@
 		"eslint-plugin-tailwindcss": "3.18.0",
 		"eslint-plugin-unicorn": "59.0.1",
 		"eslint-plugin-unused-imports": "4.1.4",
-		"git-cz": "4.9.0",
 		"globals": "16.1.0",
 		"license-checker": "25.0.1",
 		"playwright": "1.52.0",
@@ -149,5 +150,10 @@
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.32.0",
 		"vitest": "3.1.1"
+	},
+	"config": {
+		"commitizen": {
+			"path": "cz-conventional-changelog"
+		}
 	}
 }
