--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -15,4 +15,6 @@ jobs:
           with:
             token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
             # this is a built-in strategy in release-please, see "Action Inputs" for more options
+            config-file: .release-please-config.json
+            manifest-file: .release-please-manifest.json
             release-type: node
