--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
 		"dotenv": "17.0.0",
 		"eslint": "9.27.0",
 		"eslint-config-next": "15.3.4",
+		"eslint-plugin-boundaries": "5.0.1",
 		"eslint-plugin-jsx-a11y": "6.10.2",
 		"eslint-plugin-perfectionist": "4.13.0",
 		"eslint-plugin-react": "7.37.5",
