--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
-		"lint:inspector": "config-inspector --config eslint.config.js",
+		"lint:inspector": "config-inspector --config eslint.config.ts",
 		"fmt:ci": "biome ci *",
 		"fmt:fix": "biome check --write *",
 		"test": "vitest",
@@ -128,6 +128,7 @@
 		"eslint": "9.27.0",
 		"eslint-config-next": "15.3.4",
 		"eslint-plugin-boundaries": "5.0.1",
+		"eslint-plugin-jsonc": "2.20.1",
 		"eslint-plugin-jsx-a11y": "6.10.2",
 		"eslint-plugin-perfectionist": "4.13.0",
 		"eslint-plugin-react": "7.37.5",
@@ -137,6 +138,7 @@
 		"eslint-plugin-tailwindcss": "3.18.0",
 		"eslint-plugin-unicorn": "59.0.1",
 		"eslint-plugin-unused-imports": "4.1.4",
+		"eslint-plugin-yml": "1.18.0",
 		"globals": "16.1.0",
 		"license-checker": "25.0.1",
 		"playwright": "1.52.0",
