--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
-		"prisma:generate": "prisma generate --no-engine --schema=./s-schema/schema.prisma",
+		"prisma:generate": "prisma generate --no-engine --no-hints --schema=./s-schema/schema.prisma",
 		"prisma:migrate": "prisma migrate dev --schema=./s-schema/schema.prisma",
 		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
 		"prisma:studio": "prisma studio  --schema=./s-schema/schema.prisma",
@@ -37,14 +37,7 @@
 		"@next/third-parties": "15.4.4",
 		"@prisma/client": "6.13.0",
 		"@prisma/extension-accelerate": "1.3.0",
-		"@radix-ui/react-dialog": "1.1.14",
-		"@radix-ui/react-dropdown-menu": "2.1.15",
 		"@radix-ui/react-icons": "1.3.2",
-		"@radix-ui/react-label": "2.1.7",
-		"@radix-ui/react-select": "2.2.5",
-		"@radix-ui/react-separator": "1.1.7",
-		"@radix-ui/react-slot": "1.2.3",
-		"@radix-ui/react-tabs": "1.1.12",
 		"@sentry/nextjs": "9.43.0",
 		"@shikijs/rehype": "3.8.1",
 		"@t3-oss/env-nextjs": "0.13.8",
@@ -66,6 +59,7 @@
 		"next-view-transitions": "0.3.4",
 		"pino": "9.7.0",
 		"prisma": "6.13.0",
+		"radix-ui": "1.4.2",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"rehype-slug": "6.0.0",
