--- a/.github/workflows/renovate-config-validator.yaml
+++ b/.github/workflows/renovate-config-validator.yaml
@@ -8,16 +8,6 @@ on:
       - '.github/workflows/renovate-validator.yaml'
 
 jobs:
-  renovate-config-validator:
-    timeout-minutes: 10
-    runs-on: ubuntu-24.04
-    permissions: {}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        with:
-          persist-credentials: false
-          submodules: true
-
-      - name: validate renovate.json
-        run: npx --package=renovate -c renovate-config-validator
+  push-to-public:
+    uses: s-hirano-ist/s-templates/.github/workflows/renovate-config-validator.yaml@main
+    secrets: inherit
