--- a/.github/workflows/update-submodule.yaml
+++ b/.github/workflows/update-submodule.yaml
@@ -6,27 +6,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-submodules:
-    runs-on: ubuntu-24.04
-    permissions: {}
-    timeout-minutes: 20
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
-    steps:
-      - name: Checkout files
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-        with:
-          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-          submodules: true
-          persist-credentials: false
-
-      - name: Update submodules
-        run: git submodule update --remote --recursive
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7
-        with:
-          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-          commit-message: "contents: update submodule"
-          title: "contents: update submodule"
-          body: Submoduleのupdate。
+  push-to-public:
+    uses: s-hirano-ist/s-templates/.github/workflows/update-submodule.yaml@main
+    secrets: inherit
